--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,13 @@ p {
 }
 
 button {
-    max-width: 100px;
+    width: 110px;
     background-color: #3882F6;
     color: #F9FAF8;
-    border-radius: 8px;  
+    padding: 10px;
+    border-radius: 8px;
+    border: none;
+
 }
 
 header {
@@ -46,7 +49,7 @@ header {
     flex-direction: row;
     margin-left: 40px;
     margin-right: 40px;
-   
+
   }
 .container img{
     display: flex;
