--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     flex-direction: column;
     color: #F9FAF8;
     font-size: 24px;
@@ -25,7 +25,6 @@ button {
     padding: 10px;
     border-radius: 8px;
     border: none;
-
 }
 
 header {
@@ -33,14 +32,6 @@ header {
     flex-direction: row;
     flex-wrap: nowrap;
 }
-
-/*.container {
-    padding-left: 120px;
-    padding-top: 40px;
-    padding-right: 700px;
-    padding-bottom: 40px;
-}
-*/
 
 .container {
     display: flex;
@@ -55,6 +46,7 @@ header {
     display: flex;
     align-self: center;
     order: 2;
+    margin-left: 15px;
 }
 .sub {
     align-self: flex-start;
@@ -89,8 +81,21 @@ ul {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
-.middle .images {
-    justify-content: space-between;
+.crew {
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+  flex-wrap: wrap;
+}
+
+.crew_images {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border: 4px solid #3882F6;
+  border-radius: 15%;
+  margin: 5px 20px 5px 20px;
 }
