--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,11 @@ body {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    color: #F9FAF8;
+    color: #1B1717;
     font-size: 24px;
     margin:0;
     padding: 0;
+    background-color: #EEEBDD;
 }
 
 h1 {
@@ -20,8 +21,8 @@ p {
 
 button {
     width: 110px;
-    background-color: #3882F6;
-    color: #F9FAF8;
+    background-color: #CE1212;
+    color: #1B1717;
     padding: 10px;
     border-radius: 8px;
     border: none;
@@ -58,7 +59,7 @@ ul {
     display: flex;
     flex-wrap: nowrap;
     gap: 8px;
-    color: #E5E7EB;
+    color: #CE1212;
     font-size: 18px;
     flex: 1;
     align-self: center;
@@ -68,7 +69,8 @@ ul {
 .top {
     padding-left: 15px;
     padding-right: 15px;
-    background-color: #1F2937;
+    background-color: #1B1717;
+    color:#EEEBDD;
     flex: 1;
     flex-direction: row;
     padding-bottom: 40px;
@@ -77,7 +79,7 @@ ul {
 
 .middle {
   margin-top: 45px;
-    background-color: white;
+    background-color: #EEEBDD;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -95,7 +97,7 @@ ul {
   width: 200px;
   height: 200px;
   object-fit: cover;
-  border: 4px solid #3882F6;
+  border: 4px solid #CE1212;
   border-radius: 15%;
   margin: 5px 20px 5px 20px;
 }
@@ -106,13 +108,56 @@ ul {
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
-  background-color: #E5E7EB;
+  background-color: #810000;
   font-family: sans-serif;
   font-style: italic;
-  color: #1F2937;
+  color: #EEEBDD;
   padding: 50px 0px;
 }
 
 .quote h3 {
   font-weight: lighter;
+}
+
+.bottom {
+  display: flex;
+  justify-content: center;
+  background-color: #EEEBDD;
+}
+
+.signup {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border: solid #CE1212;
+  background-color: #CE1212;
+  border-radius: 10px;
+  margin: 50px;
+  padding: 10px;
+  width: 700px;
+}
+
+.signup .text {
+  display: flex;
+  flex-direction: column;
+}
+.join {
+  border: 3px solid #EEEBDD;
+  margin-left: auto;
+}
+
+.footer {
+  background-color: #1B1717;
+  color: #EEEBDD;
+  text-align: center;
+  font-size: 12px;
+  padding: 20px;
+}
+
+a:link {
+  color: #CE1212;
+}
+
+a:visited {
+  color: #810000;
 }
