--- a/css/main.css
+++ b/css/main.css
@@ -1,96 +1,99 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    color: #1B1717;
-    font-size: 24px;
-    margin:0;
-    padding: 0;
-    background-color: #EEEBDD;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  color: #1B1717;
+  font-size: 24px;
+  margin: 0;
+  padding: 0;
+  background-color: #EEEBDD;
 }
 
 h1 {
-    font-size: 48px;
-    font-weight: extra-bold;
+  font-size: 48px;
+  font-weight: extra-bold;
 }
 
 p {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 button {
-    width: 110px;
-    background-color: #CE1212;
-    color: #1B1717;
-    padding: 10px;
-    border-radius: 8px;
-    border: none;
+  width: 110px;
+  background-color: #CE1212;
+  color: #1B1717;
+  padding: 10px;
+  border-radius: 8px;
+  border: none;
 }
 
 header {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 .container {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    flex-direction: row;
-    margin-left: 40px;
-    margin-right: 40px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: row;
+  margin-left: 40px;
+  margin-right: 40px;
+}
 
-  }
-.container img{
-    display: flex;
-    align-self: center;
-    order: 2;
-    margin-left: 15px;
+.container img {
+  display: flex;
+  align-self: center;
+  order: 2;
+  margin-left: 15px;
 }
+
 .sub {
-    align-self: flex-start;
-    max-width: 50%;
-    margin-right: 15px;
+  align-self: flex-start;
+  max-width: 50%;
+  margin-right: 15px;
 }
+
 ul {
-    list-style: none;
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 8px;
-    color: #CE1212;
-    font-size: 18px;
-    flex: 1;
-    align-self: center;
-    justify-content: flex-end;
+  list-style: none;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 30px;
+  color: #CE1212;
+  font-size: 20px;
+  flex: 1;
+  align-self: center;
+  justify-content: flex-end;
 }
 
 .top {
-    padding-left: 15px;
-    padding-right: 15px;
-    background-color: #1B1717;
-    color:#EEEBDD;
-    flex: 1;
-    flex-direction: row;
-    padding-bottom: 40px;
-    flex-wrap: nowrap;
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: #1B1717;
+  color: #EEEBDD;
+  flex: 1;
+  flex-direction: row;
+  padding-bottom: 40px;
+  flex-wrap: nowrap;
 }
 
 .middle {
   margin-top: 45px;
-    background-color: #EEEBDD;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  background-color: #EEEBDD;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .crew {
   display: flex;
   flex-direction: row;
-  justify-content:space-around;
+  justify-content: space-around;
   flex-wrap: wrap;
+  text-align: center;
 }
 
 .crew_images {
@@ -141,6 +144,7 @@ ul {
   display: flex;
   flex-direction: column;
 }
+
 .join {
   border: 3px solid #EEEBDD;
   margin-left: auto;
@@ -155,9 +159,14 @@ ul {
 }
 
 a:link {
-  color: #CE1212;
+  color: #C8C6C6;
+  text-decoration: none;
 }
 
 a:visited {
   color: #810000;
+}
+
+.footer a {
+  color: #CE1212;
 }
