--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   flex-direction: column;
   color: #1B1717;
   font-size: 24px;
@@ -36,6 +36,7 @@ header {
 
 .container {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
   flex-direction: row;
@@ -45,16 +46,28 @@ header {
 
 .container img {
   display: flex;
+  flex-wrap: wrap;
   align-self: center;
-  order: 2;
-  margin-left: 15px;
+  margin-right: 20px;
+  margin-bottom:auto;
+  width: 450px;
+  max-width:100%;
+  min-width: 0;
+  min-height: 0;
 }
 
 .sub {
   align-self: flex-start;
   max-width: 50%;
   margin-right: 15px;
+  flex-wrap: wrap;
 }
+
+.sub a:hover {
+  color: #810000;
+}
+
+ul > * + * { margin-left: 2rem;}
 
 ul {
   list-style: none;
@@ -76,7 +89,7 @@ ul {
   flex: 1;
   flex-direction: row;
   padding-bottom: 40px;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
 }
 
 .middle {
@@ -145,6 +158,10 @@ ul {
   flex-direction: column;
 }
 
+.signup a:hover {
+  color: #810000;
+}
+
 .join {
   border: 3px solid #EEEBDD;
   margin-left: auto;
@@ -165,9 +182,23 @@ a:link {
 }
 
 a:visited {
-  color: #810000;
+color: #C8C6C6;
 }
+
+a:hover {
+  color: #CE1212;
+}
+
 
 .footer a {
   color: #CE1212;
+}
+
+.footer a:visited {
+  color: #CE1212;
+}
+
+
+.footer a:hover {
+  color: #C8C6C6;
 }
